@@ -1,6 +1,9 @@
 v3.7.2 (XXXX-XX-XX)
 -------------------
 
+* Fixed issue BTS-169: cost estimation for LIMIT nodes showed wrong number of
+  estimated items.
+
 * Fixed internal issue #742: Add tick storage in index meta payload for
   ArangoSearch view links after collection truncate operation.
 
